# pr1a_conan

./: CMakeLists.txt  CONTROLES.md  GUIA_IMPLEMENTACION_PR3.md  PLANIFICACION_PRACTICA_3_REUTILIZACION.md  igvCamara.cpp  igvCamara.h  igvCilindro.cpp  igvCubo.cpp  igvDisco.cpp  igvEscena3D.cpp  igvEscena3D.h  igvEsfera.cpp  igvInterfaz.cpp  igvInterfaz.h  igvMallaTriangulos.cpp  igvMallaTriangulos.h  igvModeloArticulado.cpp  igvModeloArticulado.h  igvOctaedro.cpp  igvTetraedro.cpp  pr1a.cpp
Mallas/: igvModeloArticulado.cpp  igvModeloArticulado.h
